package client.ui.results;

import javafx.fxml.Initializable;

import java.net.URL;
import java.util.ResourceBundle;

public class ResultsController implements Initializable {

    @Override
    public void initialize(URL location, ResourceBundle resources) {

    }
}
