package client.ui.results;

public class ResultsModel {
}
